fix spacing

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -128,7 +128,7 @@ a{
   height: 14rem;
 }
 .testimonials{
-  height: 21rem;
+  height: 22rem;
 }
 }
 
